<resources>
    <string name="app_name">MyAuthentication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_register">Login</string>
    <string name="text_register_with">O ingrese con</string>
    <string name="btn_facebook">Facebook</string>
    <string name="btn_google">Google</string>
    <string name="you_do_not_have_an_account">No tienes cuenta?</string>
    <string name="sign_up_login">Registrate!</string>
    <string name="hint_name">Nombre y Apellido</string>
    <string name="hint_repeat_password">Contraseña</string>
    <string name="sign_up">Registrarme</string>
    <string name="do_you_already_have_an_account">Ya tienes cuenta?</string>
    <string name="get_into">Ingresa!</string>
    <string name="sign_out_session">Cerrar sesión</string>
    <string name="quit">Salir</string>
    <string name="invalid_credentials">Credenciales Inválidas</string>
    <string name="error_dialog">Error</string>
    <string name="error_login_description">Ha ocurrido un error al iniciar sesión</string>
    <string name="ok">Aceptar</string>
    <string name="invalid_pass">Contraseña inválida</string>
    <string name="invalid_email">Email inválido</string>
    <string name="error_dialog_login">Ha ocurrido un error al iniciar sesión</string>
    <string name="error_dialog_register">Ha ocurrido un error al registrar el usuario</string>
    <string name="error_dialog_register_signup">Verificar</string>
    <string name="success_dialog">Confirmacion de registro</string>
    <string name="message_successful">El usuario se ha registrado con éxito</string>
    <string name="required_name">El nombre debe contener al menos 5 letras</string>
    <string name="pass_dont_match">Las contraseñas no coinciden</string>
    <string name="services_client_id">981875200365-p9cud8do3ntbjl6rvf80jcsha50snqg8.apps.googleusercontent.com</string>

    <string name="facebook_app_id">1729820294054897</string>
    <string name="fb_login_protocol_scheme">fb1729820294054897</string>
    <string name="facebook_client_token">9feb1c10c4c26574f3487d905c69bcb1</string>
    <string name="dialog_credentials_error">Error en las credenciales</string>

</resources>