<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/common_margin_default"
        android:layout_marginStart="@dimen/common_margin_default"
        android:layout_marginBottom="@dimen/common_margin_default"
        android:hint="@string/hint_name"
        app:errorTextColor="@color/red"
        app:errorIconTint="@color/red"
        app:hintTextColor="#B0B0B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="textCapWords"
        app:helperText=" ">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_default"
        android:layout_marginEnd="@dimen/common_margin_default"
        android:layout_marginStart="@dimen/common_margin_default"
        android:hint="@string/hint_email"
        app:errorTextColor="@color/red"
        app:errorIconTint="@color/red"
        app:hintTextColor="#B0B0B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldName"
        app:helperText=" ">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_default"
        android:layout_marginEnd="@dimen/common_margin_default"
        android:layout_marginStart="@dimen/common_margin_default"
        android:hint="@string/hint_password"
        app:hintTextColor="#B0B0B0"
        app:errorIconDrawable="@null"
        app:errorTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldEmail"
        app:passwordToggleEnabled="true"
        app:helperText=" ">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldRepeatPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_default"
        android:layout_marginEnd="@dimen/common_margin_default"
        android:layout_marginStart="@dimen/common_margin_default"
        android:hint="@string/hint_repeat_password"
        app:hintTextColor="#B0B0B0"
        app:errorIconDrawable="@null"
        app:errorTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPassword"
        app:passwordToggleEnabled="true"
        app:helperText=" ">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_middle"
        android:layout_marginEnd="@dimen/common_margin_default"
        android:layout_marginStart="@dimen/common_margin_default"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldRepeatPassword"
        app:layout_constraintBottom_toTopOf="@+id/tv_have_account_log_in"
        app:helperText=" "/>

    <TextView
        android:id="@+id/tv_have_account_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_middle"
        android:text="@string/have_account_log_in"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>